--- a/ATVs-LIMA/Aula 00 - Site Pessoal/SITE1/Site Pessoal.html
+++ b/ATVs-LIMA/Aula 00 - Site Pessoal/SITE1/Site Pessoal.html
@@ -11,7 +11,7 @@
     <div class="container">
 
     <header>
-        <img src="Avatar.jpeg" alt="avatar">  
+        <img src="avatar.jpeg" alt="avatar">  
     <h1>Perfil Pessoal - Daniel Charlo</h1>
     <h2>Desenvolvimento de Sistemas - Senai</h2>
     <p>Estudante de Desenvolvimento de Sistemas no SENAI, com interesse em tecnologia e programação.</p>
@@ -19,7 +19,7 @@
 
     <section>
         <h1>Sobre Mim</h1>
-        <p>Olá! Meu nome é Daniel Charlo.Atualmente, divido meu tempo entre estudos e meu interesse por jogos — especialmente jogos como Valorant.
+        <p>Olá, Meu nome é Daniel Charlo.Atualmente, divido meu tempo entre estudos e meu interesse por jogos — especialmente jogos como Valorant.
 
     Meu dia a dia: Trabalho como jovem aprendiz na Alphatech Automação das 7h às 11h, depois sigo para o SENAI, onde curso Desenvolvimento de Sistemas das 13h às 17h. À noite, estudo das 19h às 23h no Perches.
 
