--- a/ATVs-LIMA/Aula 00 - Site Pessoal/SITE2/Site Livre.html
+++ b/ATVs-LIMA/Aula 00 - Site Pessoal/SITE2/Site Livre.html
@@ -46,7 +46,7 @@
     <div class="card">
       <img src="Quadra.jpg" alt="Quadra de futebol" />
       <h2>⚽ Jogar futebol</h2>
-      <p>Gosto de jogar bolo com meus amigos aos fins de semana.</p>
+      <p>Gosto de jogar bola com meus amigos aos fins de semana.</p>
     </div>
   </div>
 </body>
