--- a/ATVs-LIMA/Aula 02/Sobre.html
+++ b/ATVs-LIMA/Aula 02/Sobre.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Historia da igreja</title>
+    <link rel="stylesheet" href="igreja.css">
+    <script src="javascript.js"></script>
+    <title>Igreja Santo Antonio</title>
 </head>
 <body>
+    <header>
+        <h1>CAPELA SANTO ANTONIO</h1>
+         <section>
+        <button onclick="mudarPagina('Sobre.html')" class="link">Sobre</button>
+        <button onclick="mudarPagina('Eventos.html')" class="link">Eventos</button>
+   <section>
+    </header>
     
+
+
 </body>
 </html>
