--- a/ATVs-LIMA/Aula 02/igreja.html
+++ b/ATVs-LIMA/Aula 02/igreja.html
@@ -4,19 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="igreja.css">
+    <script src="javascript.js"></script>
     <title>Igreja Santo Antonio</title>
 </head>
 <body>
     <header>
         <h1>CAPELA SANTO ANTONIO</h1>
          <section>
-         <h4>Sobre</h4>
-        <h4>Localidade</h4>
-        <h4>Eventos</h4>
-        <h4>Imagens</h4>
+        <button onclick="mudarPagina('Sobre.html')" class="link">Sobre</button>
+        <button onclick="mudarPagina('Eventos.html')" class="link">Eventos</button>
    <section>
     </header>
-
+    <div class="igreja">
+        <img src="IMGS/Igreja.webp" alt="imagem da igreja">
+        <div class="texto-igreja">
+        </div>
+    </div>
 
 
 </body>
