--- a/ATVs-LIMA/Aula 04/Nostalgia.html
+++ b/ATVs-LIMA/Aula 04/Nostalgia.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Luckiest+Guy&family=Fredoka+One&family=Bangers&family=Comic+Neue&display=swap" rel="stylesheet">
+    <link rel="Shortcut icon" href="nostalgico.png">
 
     <title>Nostalgia Animada: Desenhos dos Anos 80 e 90</title>
 </head>
@@ -55,6 +56,28 @@
                 <p>Onze carros excêntricos competem em corridas malucas, com Dick Vigarista e seu cão Muttley tentando trapacear.</p>
         </div>
 
+        <div class="galeria">
+            <img src="caverna do dragão.png" alt="caverna do dragão">
+                <h3>Caverna do dragão</h3>
+                <p>Ano de estreia:1983</p>
+                <p>Um grupo de jovens que são transportados para um mundo mágico e perigoso enquanto andavam em uma montanha russa.</p>
+        </div>
+
+        <div>
+            <h3>Fica aqui um quiz para se divertir e relembrar mais desenhos nostalgicos.</h3>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/Vv-QiudZJmM?si=dy31R98RXZMEVSDD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+
     </div>
+
+    <div class="rodape">
+    <a href="https://github.com/DanielCharlo/LIMA.git" target="_blank">
+        <img src="github-8x.png" alt="link github">
+    </a>
+    <p>Daniel Henrique Charlo</p>
+    <p>Email: danielhenriquecharlo@gmail.com</p>
+    </div>
+
+
 </body>
 </html>
